Добавлены новые разделы

--- a/style.css
+++ b/style.css
@@ -1,133 +1,1 @@
-  html {
-  box-sizing: border-box;
-  overflow-x: hidden;
-  font-family: Times;
-}
-*,
-*:after,
-*:before {
-  box-sizing: inherit;
-}
-.container {
-  display: flex;
-  /* justify-content: space-between; */
-  max-width: 960px;
-  margin: 20px auto;
-  background-color: #aeaeae;
-  box-shadow: 1px 1px 10px #000000;
-}
-.container .profile {
-  flex-basis: 35%;
-  background-color: #39383a;
-  margin-right: 30px;
-}
-.container .profile p {
-  color: #ababab;
-  font-size: 16px;
-  font-weight: 300;
-  line-height: 24.19px;
-  letter-spacing: 0.5px;
-}
-.container .profile .profile-photo img {
-  display: block;
-  max-width: 400px;
-  transform: scale(-1, 1)
-}
-.container .profile .profile-info {
-  padding: 30px 40px 50px;
-}
-.container .profile .profile-info h2 {
-  color: #ffffff;
-  font-size: 25px;
-  font-weight: 700;
-  text-transform: uppercase;
-  letter-spacing: 0.63px;
-}
-.container .profile .contacts {
-  margin-bottom: 70px;
-}
-.container .profile .contacts-item {
-  padding: 22px 0;
-  border-bottom: 1px dashed #5a5a5a;
-}
-.container .profile .contacts-item p {
-  display: block;
-  max-width: 154px;
-  margin-top: 10px;
-  font-size: 16px;
-  color: #ababab;
-  font-family: "Open Sans";
-  text-decoration: none;
-  font-style: normal;
-}
-.container .profile .contacts-item a{
-  color: #ababab;
-  text-decoration: none;
-  transition: 0.2s;
-}
-.container .profile .contacts-item a:hover{
-  color: #c8c8c8;
-}
-.container .profile .contacts-item h3 {
-  margin: 0;
-  color: #fff;
-}
-.container .resume {
-  /* flex-basis: 62.5%; */
-  padding: 25px 30px;
-  background-color: #fff;
-}
-.container .resume-wrap {
-  padding: 36px 20px;
-  border: 1px solid rgba(168, 168, 168, 0.44);
-  height: 100%;
-  color: #39383a;
-  font-size: 18px;
-  font-weight: 600;
-}
-.container .resume-wrap .about {
-  text-align: center;
-  margin-bottom: 30px;
-  border-bottom: 1px solid #e0e0e0;
-}
-.container .resume-wrap .about-name h1 {
-  font-size: 30px;
-  font-weight: 700;
-  letter-spacing: 7.75px;
-  text-transform: uppercase;
-}
-.container .resume-wrap .about-name p {
-  color: #808080;
-  font-family: "Open Sans";
-  font-size: 17px;
-  font-weight: 400;
-  letter-spacing: 1.12px;
-  text-transform: uppercase;
-}
-.container .resume-wrap .about-contacts p {
-  color: #808080;
-  font-family: "Open Sans";
-  font-size: 14px;
-  font-weight: 400;
-  letter-spacing: 1.12px;
-}
-.container .resume-wrap .skills {
-  border-bottom: 1px solid #e0e0e0;
-}
-.container .resume-wrap .skills .list {
-  font-size: 20px;
-}
-.resume-wrap .resume-wrap .list-item {
-  margin-bottom: 60px;
-}
-.resume-wrap .list-item_title {
-  margin: 0;
-  font-size: 15px;
-  font-weight: 700;
-  text-transform: uppercase;
-}
-.resume-wrap .list-item_text {
-  color: #777777;
-  font-size: 16px;
-  font-weight: 400;
-}
+*{margin:0;padding:0;-webkit-box-sizing:border-box;box-sizing:border-box}html{-webkit-box-sizing:border-box;box-sizing:border-box}*,::after,::before{-webkit-box-sizing:inherit;box-sizing:inherit}ol[class],ul[class]{padding:0}blockquote,body,dd,dl,figcaption,figure,h1,h2,h3,h4,h5,h6,li,ol,p,ul{margin:0}aside,footer,header,main,section{display:block}footer,header{-webkit-box-flex:0;-ms-flex:0 0 auto;flex:0 0 auto}ul{list-style:none}img{max-width:100%;height:auto}button,input,select,textarea{font:inherit}a{display:inline-block;text-decoration:none}html{display:block;overflow-x:hidden;min-width:100%;min-height:100vh}body{overflow-x:hidden;font-family:Times,sans-serif;width:100%;scroll-behavior:smooth;background-color:#fff}.container{display:-webkit-box;display:-ms-flexbox;display:flex;-webkit-box-pack:justify;-ms-flex-pack:justify;justify-content:space-between;max-width:960px;margin:20px auto;background-color:#aeaeae;-webkit-box-shadow:1px 1px 10px #000;box-shadow:1px 1px 10px #000}.profile{-ms-flex-preferred-size:40%;flex-basis:40%;background-color:#39383a;margin-right:30px}.profile__photo{display:block;max-width:400px;-webkit-transform:scale(-1,1);-ms-transform:scale(-1,1);transform:scale(-1,1)}.profile__info{padding:30px 40px 50px}.profile__info-title{margin-bottom:20px;color:#fff;font-size:25px;font-weight:700;text-transform:uppercase;letter-spacing:.63px}.profile__info-subtitle{color:#ababab;font-size:16px;font-weight:300;line-height:24.19px;letter-spacing:.5px}.profile__contacts{margin-bottom:70px}.profile__contacts-item{padding:22px 0;border-bottom:1px dashed #5a5a5a}.profile__contacts-item-title{margin:0;color:#fff}.profile__contacts-item-subtitle{display:block;margin-top:10px;font-size:16px;color:#ababab;font-family:'Open Sans';text-decoration:none;font-style:normal}.profile__contacts-item-link{color:#ababab;text-decoration:none;-webkit-transition:.2s;-o-transition:.2s;transition:.2s}.profile__contacts-item-link:hover{color:#c8c8c8}.resume{-ms-flex-preferred-size:60%;flex-basis:60%;padding:25px 30px;background-color:#fff}.resume__wrap{padding:36px 20px;border:1px solid rgba(168,168,168,.44);height:100%;color:#39383a;font-size:18px;font-weight:600}.resume__about{text-align:center;margin-bottom:30px;border-bottom:1px solid #e0e0e0}.resume__about-name-title{margin:20px 0;font-size:30px;font-weight:700;letter-spacing:7.75px;text-transform:uppercase}.resume__about-name-subtitle{color:grey;font-family:'Open Sans';font-size:17px;font-weight:400;letter-spacing:1.12px;text-transform:uppercase}.resume__about-contacts-email,.resume__about-contacts-phone{margin:17px 0;color:grey;font-family:'Open Sans';font-size:14px;font-weight:400;letter-spacing:1.12px}.resume__skills{border-bottom:1px solid #e0e0e0}.resume__list{margin-left:20px;list-style-type:disc}.resume__list-item{margin-bottom:50px}.resume__list-item-title{margin:20px 0;font-size:15px;font-weight:700;text-transform:uppercase;color:#000}.resume__sublist{display:-webkit-box;display:-ms-flexbox;display:flex;-webkit-box-orient:vertical;-webkit-box-direction:normal;-ms-flex-direction:column;flex-direction:column;list-style-type:"- "}.resume__sublist-item{font-size:16px;font-weight:400;color:#777}.resume__sublist-item:not(:first-child){margin-top:15px}.resume__sublist-item-title{font-size:18px}.resume__projects{display:-webkit-box;display:-ms-flexbox;display:flex;-webkit-box-orient:vertical;-webkit-box-direction:normal;-ms-flex-direction:column;flex-direction:column}.resume__projects-item{word-break:break-all;margin-top:5px}@media screen and (max-width:980px){.container{-webkit-box-orient:vertical;-webkit-box-direction:normal;-ms-flex-direction:column;flex-direction:column;padding:0 15px}.profile{display:-webkit-box;display:-ms-flexbox;display:flex;margin-right:0;-webkit-box-pack:center;-ms-flex-pack:center;justify-content:center}.profile__photo{border-left:2px dashed #fff;-webkit-transform:scale(-1,1);-ms-transform:scale(-1,1);transform:scale(-1,1);display:-webkit-box;display:-ms-flexbox;display:flex;-webkit-box-align:end;-ms-flex-align:end;align-items:end;-ms-flex-negative:0;flex-shrink:0}.profile__info{-ms-flex-preferred-size:60%;flex-basis:60%}.resume{-ms-flex-preferred-size:100%;flex-basis:100%}}@media screen and (max-width:750px){.profile{-webkit-box-orient:vertical;-webkit-box-direction:normal;-ms-flex-direction:column;flex-direction:column;-webkit-box-align:center;-ms-flex-align:center;align-items:center;text-align:center}.profile__photo{border-left:2px dashed #fff;border-right:2px dashed #fff;border-bottom:2px dashed #fff}}@media screen and (max-width:480px){.resume{text-align:center;padding:0}.resume__list{list-style-type:none}.resume__sublist-item{list-style-type:none}.resume__projects{text-align:start}}@media screen and (max-width:440px){.resume__about-name-title{font-size:25px;letter-spacing:1px}.resume__skills-title{text-align:center}}@media screen and (max-width:400px){.profile__contacts-item-subtitle{margin-left:0}}
